--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^16.2.7",
     "@angular/compiler": "^16.2.7",
     "@angular/core": "^16.2.7",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^16.2.7",
     "@angular/material": "^16.2.6",
     "@angular/platform-browser": "^16.2.7",
@@ -24,9 +25,10 @@
     "@ngrx/effects": "^16.2.0",
     "@ngrx/entity": "^16.2.0",
     "@ngrx/store": "^16.2.0",
+    "@ngrx/store-devtools": "^16.2.0",
     "@popperjs/core": "^2.11.6",
-    "angular-in-memory-web-api": "^0.16.0",
     "bootstrap": "^5.2.3",
+    "firebase": "^10.4.0",
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
